<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <!-- 지도 -->
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.mobile.reconnect.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <!-- 제보 -->
    <fragment
        android:id="@+id/navigation_report"
        android:name="com.mobile.reconnect.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_reportDetailFragment"
            app:destination="@id/fragment_report_detail" />
        <action
            android:id="@+id/action_reportFragment_to_reportRegistrationFragment"
            app:destination="@id/fragment_report_registration" />
    </fragment>

    <!-- 제보 상세 -->
    <fragment
        android:id="@+id/fragment_report_detail"
        android:name="com.mobile.reconnect.ui.report.ReportDetailFragment"
        tools:layout="@layout/fragment_report_datail" >
        <action
            android:id="@+id/action_reportDetailFragment_to_reportRegistrationFragment"
            app:destination="@id/fragment_report_registration" />
    </fragment>

    <!-- 제보 등록 -->
    <fragment
        android:id="@+id/fragment_report_registration"
        android:name="com.mobile.reconnect.ui.report.ReportRegistrationFragment"
        tools:layout="@layout/fragment_report_registration" >
        <action
            android:id="@+id/action_reportRegistrationFragment_to_myReportFragment"
            app:destination="@id/navigation_my_report" />
    </fragment>

    <!-- 검색 -->
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.mobile.reconnect.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <!-- 마이 -->
    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.mobile.reconnect.ui.my.MyFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_my" >

        <action
            android:id="@+id/action_navigation_mypage_to_navigation_my_report"
            app:destination="@id/navigation_my_report" />
        <action
            android:id="@+id/action_navigation_mypage_to_navigation_my_noti"
            app:destination="@id/navigation_my_noti" />
        <action
            android:id="@+id/action_navigation_mypage_to_navigation_my_info"
            app:destination="@id/navigation_my_info" />

    </fragment>

    <fragment
        android:id="@+id/navigation_my_report"
        android:name="com.mobile.reconnect.ui.my.MyReportFragment"
        android:label="@string/title_my_report"
        tools:layout="@layout/fragment_my_report" />

    <fragment
        android:id="@+id/navigation_my_noti"
        android:name="com.mobile.reconnect.ui.my.MyNotificationFragment"
        android:label="@string/title_my_notification"
        tools:layout="@layout/fragment_my_notification" />

    <fragment
        android:id="@+id/navigation_my_info"
        android:name="com.mobile.reconnect.ui.my.MyInfoFragment"
        android:label="@string/title_my_info"
        tools:layout="@layout/fragment_my_info" />

</navigation>